--- a/views/mailers/mail_header.ejs
+++ b/views/mailers/mail_header.ejs
@@ -1,12 +1,14 @@
 <div style="
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: space-between;
-    width: 100%;
-    padding: 10px;
+    color: rgb(197, 32, 32);
+    padding: 5px;
+    font-size: 55px;
+    font-weight: 900;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    background-color: rgba(34, 33, 33, 0.582);
   ">
-    <%=locals.user%>
-        <img src="http://localhost:8000" alt="aaa" height="30px" width="30px" />
-        <img src="http://localhost:8000" alt="user" height="30px" width="30px" />
+    AAA
 </div>
+<br />
+<br />
