--- a/views/mailers/posts/new_post.ejs
+++ b/views/mailers/posts/new_post.ejs
@@ -1,4 +1,9 @@
-<div>
+<div style="
+    background-color: rgba(34, 33, 33, 0.842) !important;
+    color: white !important;
+    font-size: 15px;
+    padding: 10px;
+  ">
     <%-include('../mail_header');-%>
         <div>
             <h2 style="text-transform: capitalize; text-align: center">
