--- a/views/organiser/partials/_header.ejs
+++ b/views/organiser/partials/_header.ejs
@@ -15,6 +15,9 @@
                 <%if(!locals.user){%>
                     <ul>
                         <li>
+                            <a href="/organiser/requests-page">Requests</a>
+                        </li>
+                        <li>
                             <a href="/organiser/sign-in ">Sign-In</a>
                         </li>
                     </ul>
