--- a/views/organiser/sign_in.ejs
+++ b/views/organiser/sign_in.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/organiser-login-page.css" />
 <div id="organiser-login">
     <div id="header-div">
-        <h1>Organiser Sign-In Page</h1>
+        <h1 style="text-align: center">Organiser Sign-In Page</h1>
     </div>
     <div id="input-div">
         <form action="/organiser/create-session" method="POST">
