--- a/assets/scss/home_layout.scss
+++ b/assets/scss/home_layout.scss
@@ -298,6 +298,7 @@
             transition: 0.4;
             margin-top: 15px;
             width: 100%;
+            overflow: hidden;
             box-sizing: border-box;
             position: relative;
             &:hover {
@@ -307,10 +308,13 @@
             .upper-div-2 {
                 display: flex;
                 flex-direction: row;
+                max-width: 80%;
+                overflow: hidden;
                 div {
                     display: flex;
                     flex-direction: column;
                     padding: 5px;
+                    box-sizing: border-box;
                     a {
                         text-decoration: none;
                         color: black;
@@ -329,20 +333,28 @@
                             color: white;
                         }
                     }
-                    span {
-                        overflow-wrap: break-word;
-                        max-width: 85%;
-                    }
                 }
             }
             .upper-div-1 {
                 width: 80%;
                 max-width: 80%;
                 a {
+                    width: 12%;
+                    min-width: 45px;
                     &:hover {
                         img {
                             border: 1px solid rgb(37, 185, 243);
                         }
+                    }
+                }
+                div {
+                    width: 80%;
+                    max-width: 80%;
+                    overflow: hidden;
+                    box-sizing: border-box;
+                    .comment-content {
+                        overflow-wrap: break-word;
+                        min-width: 100% !important;
                     }
                 }
             }
@@ -385,4 +397,65 @@
 .load-on-demand {
     visibility: hidden !important;
     // opacity: 0;
+}
+
+//style for new creator account
+#request-new-creator-account-container {
+    z-index: 99999;
+    position: fixed;
+    top: 60px;
+    right: 10px;
+    height: 320px;
+    width: 400px;
+    box-sizing: border-box;
+    overflow: hidden;
+    color: black;
+    background-color: aqua;
+    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.2);
+    #form-container {
+        margin: auto;
+        padding: 15px;
+        form {
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: space-evenly;
+            .main-input {
+                margin: 10px 0px 10px 0px;
+                border-radius: 5px;
+                height: 35px;
+                border: none;
+                outline-color: royalblue;
+                padding-left: 5px;
+            }
+            #button-input-div {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+            }
+            button {
+                background-color: royalblue;
+                border-color: royalblue;
+                cursor: pointer;
+                border-radius: 25px;
+                color: white;
+                padding: 5px 15px 5px 15px;
+                font-size: 18;
+                margin-top: 10px;
+                letter-spacing: 1.5;
+                &:hover {
+                    background-color: rgb(25, 82, 252);
+                }
+            }
+        }
+    }
+}
+
+.no_display {
+    display: none;
+}
+
+.active_display {
+    display: block;
 }
