--- a/assets/scss/my-profile-page.scss
+++ b/assets/scss/my-profile-page.scss
@@ -94,6 +94,7 @@
     position: relative;
     margin: 10px 0px 10px 0px;
     background-color: white;
+    color: black;
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
     transition: 0.4;
     &:hover {
@@ -103,14 +104,25 @@
         padding: 10px 10px 0px 10px;
         color: rgb(74, 74, 192);
     }
-    div {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+    a {
+        text-decoration: none;
+        color: black;
         padding: 10px;
         div {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
+            align-items: center;
+            padding: 10px;
+            div {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+            }
+        }
+        &:hover {
+            img {
+                border: 1.5px solid aqua;
+            }
         }
     }
 }
