--- a/assets/scss/requests.scss
+++ b/assets/scss/requests.scss
@@ -35,9 +35,11 @@
                 // background-color: red;
                 button {
                     margin: 2px;
-                    padding: 8px;
-                    font-size: 12;
+                    padding: 10px 20px 10px 20px;
+                    font-size: 14;
+                    font-weight: 850px;
                     border: none;
+                    border-radius: 4px;
                     background-color: royalblue;
                     color: white;
                     box-shadow: 1px 1px 1px 1px rgba(65, 105, 225, 1);
@@ -70,6 +72,15 @@
                     border-bottom: none;
                 }
             }
+        }
+    }
+}
+
+.add-on-hover {
+    &:hover {
+        img {
+            transition: all 0.6s;
+            border: 2.5px solid cyan;
         }
     }
 }
