--- a/views/organiser/home.ejs
+++ b/views/organiser/home.ejs
@@ -7,13 +7,13 @@
 <body>
     <div id="main-area">
         <div id="sections">
-            <div>Clubs</div>
-            <div>Hostels</div>
-            <div>Departs</div>
+            <div class="tabs" type="club">Clubs</div>
+            <div class="tabs" type="hostel">Hostels</div>
+            <div class="tabs" type="depart">Departs</div>
         </div>
         <div id="content">
             <%for(let c of locals.clubs){%>
-                <a href="/organiser/profile?profile=<%=c.id%>">
+                <a class="content-profile club" href="/organiser/profile?profile=<%=c.id%>">
                     <div class="clubs">
                         <div><img src="<%=c.pic%>" alt="club-profile" /></div>
 
@@ -26,8 +26,64 @@
                 </a>
 
                 <%}%>
+                    <%for(let c of locals.hostels){%>
+                        <a class="content-profile hostel" href="/organiser/profile?profile=<%=c.id%>">
+                            <div class="hostels">
+                                <div><img src="<%=c.pic%>" alt="club-profile" /></div>
+
+                                <div>
+                                    <span><%=c.name%></span>
+
+                                    <span><%=c.email%></span>
+                                </div>
+                            </div>
+                        </a>
+
+                        <%}%>
+                            <%for(let c of locals.departs){%>
+                                <a class="content-profile depart" href="/organiser/profile?profile=<%=c.id%>">
+                                    <div class="departs">
+                                        <div><img src="<%=c.pic%>" alt="club-profile" /></div>
+
+                                        <div>
+                                            <span><%=c.name%></span>
+
+                                            <span><%=c.email%></span>
+                                        </div>
+                                    </div>
+                                </a>
+
+                                <%}%>
         </div>
     </div>
 </body>
 
 </html>
+
+<script>
+    $(".tabs").each((i, itm) => {
+        $(itm).click((e) => {
+            handleTabChange(itm);
+        });
+    });
+
+    function handleTabChange(itm) {
+        let type = $(itm).attr("type");
+        $(".active-tab").each((i, it) => {
+            $(it).removeClass(" active-tab");
+        });
+        $(itm).addClass(" active-tab");
+        console.log("type is ", type);
+        $(".content-profile").each((i, im) => {
+            //console.log("im is ", $(im));
+            if ($(im).hasClass(type)) {
+                $(im).css("display", "flex");
+            } else {
+                $(im).css("display", "none");
+            }
+        });
+    }
+
+    //intial set hostle tab
+    handleTabChange($(".tabs")[1]);
+</script>
